@@ -1,36 +1,78 @@
+use strict;
+use warnings;
+
 use ExtUtils::MakeMaker;
 
-use inc::Module::Install;
+# ----------------
 
-# -----------------------------------------------
+# See lib/ExtUtils/MakeMaker.pm for details of how to influence
+# the contents of the Makefile that is written.
 
-name 'MarpaX-Demo-JSONParser';
+my(%params) =
+(
+	($] ge '5.005') ?
+	(
+		AUTHOR   => 'Ron Savage (ron@savage.net.au)',
+		ABSTRACT => 'A JSON parser with a choice of grammars',
+	) : (),
+	clean =>
+	{
+		FILES => 'blib/* Makefile MANIFEST MarpaX-Demo-JSONParser-*'
+	},
+	dist =>
+	{
+		COMPRESS => 'gzip',
+		SUFFIX   => 'gz'
+	},
+	DISTNAME  => 'MarpaX-Demo-JSONParser',
+	NAME      => 'MarpaX::Demo::JSONParser',
+	PL_FILES  => {},
+	PREREQ_PM =>
+	{
+		'File::Basename'	=> 2.82,
+		'File::Slurper'		=> 0.009,
+		'Marpa::R2'			=> 3.000000,
+		'MarpaX::Simple'	=> 0.06,
+		'Moo'				=> 2.003000,
+		'Path::Tiny'		=> 0.098,
+		'Perl'				=> 5.014000,
+		'strict'			=> 0,
+		'Try::Tiny'			=> 0.27,
+		'warnings'			=> 0,
+	},
+	TEST_REQUIRES =>
+	{
+		'Test::More'	=> 1.001014,
+		'Test::Pod'		=> 1.48,
+	},
+	VERSION_FROM => 'lib/MarpaX/Demo/JSONParser.pm',
+);
 
-license 'perl';
+if ( ($ExtUtils::MakeMaker::VERSION =~ /^\d\.\d\d$/) && ($ExtUtils::MakeMaker::VERSION > 6.30) )
+{
+	$params{LICENSE} = 'perl';
+}
 
-perl_version '5.014000';
+if ($ExtUtils::MakeMaker::VERSION ge '6.46')
+{
+	$params{META_MERGE} =
+	{
+		'meta-spec' =>
+		{
+			version => 2,
+		},
+		resources =>
+		{
+			bugtracker	=> 'https://rt.cpan.org/Public/Dist/Display.html?Name=MarpaX-Demo-JSONParser',
+			license		=> 'http://dev.perl.org/licenses/',
+			repository	=>
+			{
+				type	=> 'git',
+				url		=> 'https://github.com/ronsavage/MarpaX-Demo-JSONParser.git',
+				web		=> 'https://github.com/ronsavage/MarpaX-Demo-JSONParser',
+			},
+		},
+	};
+}
 
-all_from 'lib/MarpaX/Demo/JSONParser.pm';
-
-install_share;
-
-repository 'https://github.com/ronsavage/MarpaX-Demo-JSONParser';
-
-requires 'File::Basename' => 2.82;
-requires 'File::ShareDir' => 1.03;
-requires 'File::Slurp'    => 0.051003;
-requires 'Marpa::R2'      => 2.091000;
-requires 'MarpaX::Simple' => 0.03,
-requires 'Moo'            => 1.002000;
-requires 'Path::Tiny'     => 0.025;
-requires 'strict'         => 0;
-requires 'Try::Tiny'      => 0.16;
-requires 'warnings'       => 0;
-
-test_requires 'Test::Exception' => 0.31;
-test_requires 'Test::More'      => 0.98;
-#test_requires 'Test::Pod'      => 1.45; # Make it optional. See t/pod.t
-
-recursive_author_tests('xt');
-
-WriteAll;
+WriteMakefile(%params);
